[package]
name = 'consensus'
version = '6.7.1-beta1'
license = 'Apache-2.0'
edition = '2021'
authors = ['Rivtower Technologies <contact@rivtower.com>']

[dependencies]
overlord = '0.4'
tonic = '0.9'
prost = '0.11'
toml = '0.7'
serde = '1.0'
serde_derive = '1.0'
async-trait = '0.1'
ophelia = '0.3'
ophelia-blst = '0.3'
ophelia-secp256k1 = '0.3'
hex = '0.4'
derive_more = '0.99'
creep = '0.2'
libsm = '0.5'
rlp = '0.5'
tower = '0.4'
tracing = '0.1'
cloud-util = '=0.7.1-beta1'
cita_cloud_proto = '=6.7.1-beta1'

[dependencies.clap]
version = '4.3'
features = ['derive']

[dependencies.tokio]
version = '1.29'
features = ['full']

[dependencies.bytes]
version = '1.4'
features = ['serde']
[profile.release]
debug = 1
[profile.release.package."*"]
debug = 0
