[package]
name = "consensus"
version = "6.7.2-beta.3"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
overlord = "0.4"
clap = { version = "4.4", features = ["derive"] }
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.32", features = ["full"] }
toml = "0.8"
serde = "1.0"
serde_derive = "1.0"
bytes = { version = "1.5", features = ["serde"] }
async-trait = "0.1"
ophelia = "0.3"
ophelia-blst = "0.3"
ophelia-secp256k1 = "0.3"
hex = "0.4"
derive_more = "0.99"
creep = "0.2" # match with overlord
libsm = "0.5"
rlp = "0.5"
tower = "0.4"
tracing = "0.1"

cloud-util = "=0.8.0-beta.3"
cita_cloud_proto = "=6.7.2-beta.3"

[profile.release.package."*"]
# Set the default for dependencies.
debug = 0

[profile.release]
# Add debug info -- line tables only
debug = 1
